--- a/Makefile.in
+++ b/Makefile.in
@@ -61,6 +61,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 host_alias = @host_alias@
 host_triplet = @host@
+AMDEPBACKSLASH = @AMDEPBACKSLASH@
 AMTAR = @AMTAR@
 AR = @AR@
 AR_R = @AR_R@
@@ -73,11 +74,12 @@ CC = @CC@
 CGIEXT = @CGIEXT@
 CPP = @CPP@
 CRYPTLIB = @CRYPTLIB@
+CXX = @CXX@
+CYGPATH_W = @CYGPATH_W@
 DEPDIR = @DEPDIR@
 DIGEST_AUTH_HELPERS = @DIGEST_AUTH_HELPERS@
 ERR_DEFAULT_LANGUAGE = @ERR_DEFAULT_LANGUAGE@
 ERR_LANGUAGES = @ERR_LANGUAGES@
-EXEEXT = @EXEEXT@
 EXTERNAL_ACL_HELPERS = @EXTERNAL_ACL_HELPERS@
 FALSE = @FALSE@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
@@ -109,11 +111,13 @@ STORE_LIBS = @STORE_LIBS@
 STORE_MODULES = @STORE_MODULES@
 STORE_MODULE_SUBDIRS = @STORE_MODULE_SUBDIRS@
 STORE_OBJS = @STORE_OBJS@
+STRIP = @STRIP@
 TRUE = @TRUE@
 VERSION = @VERSION@
 XTRA_LIBS = @XTRA_LIBS@
 XTRA_OBJS = @XTRA_OBJS@
 am__include = @am__include@
+am__leading_dot = @am__leading_dot@
 am__quote = @am__quote@
 install_sh = @install_sh@
 makesnmplib = @makesnmplib@
@@ -141,7 +145,7 @@ EXTRA_DIST = \
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/cfgaux/mkinstalldirs
-CONFIG_HEADER = $(top_builddir)/include/autoconf.h
+CONFIG_HEADER = $(top_builddir)/include/autoconf.h $@)]
 CONFIG_CLEAN_FILES =
 DIST_SOURCES =
 
@@ -149,12 +153,14 @@ RECURSIVE_TARGETS = info-recursive dvi-recursive install-info-recursive \
 	uninstall-info-recursive all-recursive install-data-recursive \
 	install-exec-recursive installdirs-recursive install-recursive \
 	uninstall-recursive check-recursive installcheck-recursive
-DIST_COMMON = README ./include/autoconf.h.in ./include/stamp-h.in \
-	COPYING ChangeLog INSTALL Makefile.am Makefile.in acconfig.h \
-	acinclude.m4 aclocal.m4 cfgaux/compile cfgaux/config.guess \
-	cfgaux/config.sub cfgaux/depcomp cfgaux/install-sh \
-	cfgaux/missing cfgaux/mkinstalldirs configure configure.in
-all: all-recursive
+DIST_COMMON = README $@)].in ./include/autoconf.h.in \
+	./include/stamp-h1.in ./stamp-h2.in COPYING ChangeLog INSTALL \
+	Makefile.am Makefile.in acconfig.h acinclude.m4 aclocal.m4 \
+	cfgaux/compile cfgaux/config.guess cfgaux/config.sub \
+	cfgaux/depcomp cfgaux/install-sh cfgaux/missing \
+	cfgaux/mkinstalldirs configure configure.in
+all: $@)]
+	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
 .SUFFIXES:
 $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ Makefile.am  $(top_srcdir)/configure.in $(ACLOCAL_M4)
@@ -172,31 +178,53 @@ $(srcdir)/configure: @MAINTAINER_MODE_TRUE@ $(srcdir)/configure.in $(ACLOCAL_M4)
 
 $(ACLOCAL_M4): @MAINTAINER_MODE_TRUE@ configure.in acinclude.m4
 	cd $(srcdir) && $(ACLOCAL) $(ACLOCAL_AMFLAGS)
-include/autoconf.h: include/stamp-h
+include/autoconf.h: include/stamp-h1
 	@if test ! -f $@; then \
-		rm -f include/stamp-h; \
-		$(MAKE) include/stamp-h; \
+		rm -f include/stamp-h1; \
+		$(MAKE) include/stamp-h1; \
 	else :; fi
-include/stamp-h: $(srcdir)/./include/autoconf.h.in $(top_builddir)/config.status
-	@rm -f include/stamp-h include/stamp-hT
-	@echo timestamp > include/stamp-hT 2> /dev/null
+include/stamp-h1: $(srcdir)/./include/autoconf.h.in $(top_builddir)/config.status
+	@rm -f include/stamp-h1 include/stamp-h1T
+	@echo timestamp > include/stamp-h1T 2> /dev/null
 	cd $(top_builddir) \
 	  && CONFIG_FILES= CONFIG_HEADERS=include/autoconf.h \
 	     $(SHELL) ./config.status
-	@mv include/stamp-hT include/stamp-h
-$(srcdir)/./include/autoconf.h.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/./include/stamp-h.in
+	@mv include/stamp-h1T include/stamp-h1
+$(srcdir)/./include/autoconf.h.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/./include/stamp-h1.in
 	@if test ! -f $@; then \
-		rm -f $(srcdir)/./include/stamp-h.in; \
-		$(MAKE) $(srcdir)/./include/stamp-h.in; \
+		rm -f $(srcdir)/./include/stamp-h1.in; \
+		$(MAKE) $(srcdir)/./include/stamp-h1.in; \
 	else :; fi
-$(srcdir)/./include/stamp-h.in: $(top_srcdir)/configure.in $(ACLOCAL_M4) $(top_srcdir)/acconfig.h
-	@rm -f $(srcdir)/./include/stamp-h.in $(srcdir)/./include/stamp-h.inT
-	@echo timestamp > $(srcdir)/./include/stamp-h.inT 2> /dev/null
+$(srcdir)/./include/stamp-h1.in: $(top_srcdir)/configure.in $(ACLOCAL_M4) $(top_srcdir)/acconfig.h
+	@rm -f $(srcdir)/./include/stamp-h1.in $(srcdir)/./include/stamp-h1.inT
+	@echo timestamp > $(srcdir)/./include/stamp-h1.inT 2> /dev/null
 	cd $(top_srcdir) && $(AUTOHEADER)
-	@mv $(srcdir)/./include/stamp-h.inT $(srcdir)/./include/stamp-h.in
+	@mv $(srcdir)/./include/stamp-h1.inT $(srcdir)/./include/stamp-h1.in
+$@)]: stamp-h2
+	@if test ! -f $@; then \
+		rm -f stamp-h2; \
+		$(MAKE) stamp-h2; \
+	else :; fi
+stamp-h2: $(srcdir)/$@)].in $(top_builddir)/config.status
+	@rm -f stamp-h2 stamp-h2T
+	@echo timestamp > stamp-h2T 2> /dev/null
+	cd $(top_builddir) \
+	  && CONFIG_FILES= CONFIG_HEADERS=$@)] \
+	     $(SHELL) ./config.status
+	@mv stamp-h2T stamp-h2
+$(srcdir)/$@)].in: @MAINTAINER_MODE_TRUE@ $(srcdir)/./stamp-h2.in
+	@if test ! -f $@; then \
+		rm -f $(srcdir)/./stamp-h2.in; \
+		$(MAKE) $(srcdir)/./stamp-h2.in; \
+	else :; fi
+$(srcdir)/./stamp-h2.in: $(top_srcdir)/configure.in $(ACLOCAL_M4) $(top_srcdir)/acconfig.h
+	@rm -f $(srcdir)/./stamp-h2.in $(srcdir)/./stamp-h2.inT
+	@echo timestamp > $(srcdir)/./stamp-h2.inT 2> /dev/null
+	cd $(top_srcdir) && $(AUTOHEADER)
+	@mv $(srcdir)/./stamp-h2.inT $(srcdir)/./stamp-h2.in
 
 distclean-hdr:
-	-rm -f include/autoconf.h
+	-rm -f include/autoconf.h $@)]
 uninstall-info-am:
 
 # This directory's subdirectories are mostly independent; you can cd
@@ -265,7 +293,7 @@ ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	       END { for (i in files) print i; }'`; \
 	mkid -fID $$unique $(LISP)
 
-TAGS: tags-recursive $(HEADERS) $(SOURCES)  $(TAGS_DEPENDENCIES) \
+TAGS: tags-recursive $(HEADERS) $(SOURCES) $@)].in $(TAGS_DEPENDENCIES) \
 		$(TAGS_FILES) $(LISP)
 	tags=; \
 	here=`pwd`; \
@@ -280,8 +308,8 @@ TAGS: tags-recursive $(HEADERS) $(SOURCES)  $(TAGS_DEPENDENCIES) \
 	  done | \
 	  $(AWK) '    { files[$$0] = 1; } \
 	       END { for (i in files) print i; }'`; \
-	test -z "$(ETAGS_ARGS)$$unique$(LISP)$$tags" \
-	  || etags $(ETAGS_ARGS) $$tags  $$unique $(LISP)
+	test -z "$(ETAGS_ARGS)$@)].in$$unique$(LISP)$$tags" \
+	  || etags $(ETAGS_ARGS) $$tags $@)].in $$unique $(LISP)
 
 GTAGS:
 	here=`CDPATH=: && cd $(top_builddir) && pwd` \
@@ -380,7 +408,7 @@ distcheck: dist
 	  sed 'h;s/./=/g;p;x;p;x'
 check-am: all-am
 check: check-recursive
-all-am: Makefile
+all-am: Makefile $@)]
 installdirs: installdirs-recursive
 installdirs-am:
 
