--- a/icons/Makefile.in
+++ b/icons/Makefile.in
@@ -60,6 +60,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 host_alias = @host_alias@
 host_triplet = @host@
+AMDEPBACKSLASH = @AMDEPBACKSLASH@
 AMTAR = @AMTAR@
 AR = @AR@
 AR_R = @AR_R@
@@ -72,11 +73,12 @@ CC = @CC@
 CGIEXT = @CGIEXT@
 CPP = @CPP@
 CRYPTLIB = @CRYPTLIB@
+CXX = @CXX@
+CYGPATH_W = @CYGPATH_W@
 DEPDIR = @DEPDIR@
 DIGEST_AUTH_HELPERS = @DIGEST_AUTH_HELPERS@
 ERR_DEFAULT_LANGUAGE = @ERR_DEFAULT_LANGUAGE@
 ERR_LANGUAGES = @ERR_LANGUAGES@
-EXEEXT = @EXEEXT@
 EXTERNAL_ACL_HELPERS = @EXTERNAL_ACL_HELPERS@
 FALSE = @FALSE@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
@@ -108,11 +110,13 @@ STORE_LIBS = @STORE_LIBS@
 STORE_MODULES = @STORE_MODULES@
 STORE_MODULE_SUBDIRS = @STORE_MODULE_SUBDIRS@
 STORE_OBJS = @STORE_OBJS@
+STRIP = @STRIP@
 TRUE = @TRUE@
 VERSION = @VERSION@
 XTRA_LIBS = @XTRA_LIBS@
 XTRA_OBJS = @XTRA_OBJS@
 am__include = @am__include@
+am__leading_dot = @am__leading_dot@
 am__quote = @am__quote@
 install_sh = @install_sh@
 makesnmplib = @makesnmplib@
@@ -152,7 +156,7 @@ EXTRA_DIST = $(ICON1) $(ICON2) icons.shar
 DISTCLEANFILES = 
 subdir = icons
 mkinstalldirs = $(SHELL) $(top_srcdir)/cfgaux/mkinstalldirs
-CONFIG_HEADER = $(top_builddir)/include/autoconf.h
+CONFIG_HEADER = $(top_builddir)/include/autoconf.h $(top_builddir)/$@)]
 CONFIG_CLEAN_FILES =
 DIST_SOURCES =
 DATA = $(icon_DATA)
