--- a/src/fs/coss/Makefile.in
+++ b/src/fs/coss/Makefile.in
@@ -57,6 +57,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 host_alias = @host_alias@
 host_triplet = @host@
+AMDEPBACKSLASH = @AMDEPBACKSLASH@
 AMTAR = @AMTAR@
 AR = @AR@
 AR_R = @AR_R@
@@ -69,11 +70,12 @@ CC = @CC@
 CGIEXT = @CGIEXT@
 CPP = @CPP@
 CRYPTLIB = @CRYPTLIB@
+CXX = @CXX@
+CYGPATH_W = @CYGPATH_W@
 DEPDIR = @DEPDIR@
 DIGEST_AUTH_HELPERS = @DIGEST_AUTH_HELPERS@
 ERR_DEFAULT_LANGUAGE = @ERR_DEFAULT_LANGUAGE@
 ERR_LANGUAGES = @ERR_LANGUAGES@
-EXEEXT = @EXEEXT@
 EXTERNAL_ACL_HELPERS = @EXTERNAL_ACL_HELPERS@
 FALSE = @FALSE@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
@@ -105,17 +107,19 @@ STORE_LIBS = @STORE_LIBS@
 STORE_MODULES = @STORE_MODULES@
 STORE_MODULE_SUBDIRS = @STORE_MODULE_SUBDIRS@
 STORE_OBJS = @STORE_OBJS@
+STRIP = @STRIP@
 TRUE = @TRUE@
 VERSION = @VERSION@
 XTRA_LIBS = @XTRA_LIBS@
 XTRA_OBJS = @XTRA_OBJS@
 am__include = @am__include@
+am__leading_dot = @am__leading_dot@
 am__quote = @am__quote@
 install_sh = @install_sh@
 makesnmplib = @makesnmplib@
 subdir = src/fs/coss
 mkinstalldirs = $(SHELL) $(top_srcdir)/cfgaux/mkinstalldirs
-CONFIG_HEADER = $(top_builddir)/include/autoconf.h
+CONFIG_HEADER = $(top_builddir)/include/autoconf.h $(top_builddir)/$@)]
 CONFIG_CLEAN_FILES =
 DIST_SOURCES =
 DIST_COMMON = Makefile.am Makefile.in
